Added username in dashboard

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -54,9 +54,25 @@
                         <div class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"></div>
                     </div>
                     <div class="ms-3">
-                        <h6 class="mb-0">Jhon Doe</h6>
+                        <h6 class="mb-0" id="userName">Loading...</h6>
                         <span>Admin</span>
                     </div>
+                      
+                    <script>
+                        // Assume you have a function to fetch the user's name from the backend
+                        async function fetchUserName() {
+                          try {
+                            const response = await fetch('/api/getUserName'); // Replace with your actual backend endpoint
+                            const data = await response.json();
+                            document.getElementById('userName').textContent = data.name;
+                          } catch (error) {
+                            console.error('Error fetching user name:', error);
+                          }
+                        }
+                      
+                        // Call the function when the page loads
+                        window.onload = fetchUserName;
+                    </script>
                 </div>
                 <div class="navbar-nav w-100">
                     <a href="dashboard.html" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
