--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -46,7 +46,7 @@
         <div class="sidebar pe-4 pb-3">
             <nav class="navbar bg-light navbar-light">
                 <a href="dashboard.html" class="navbar-brand mx-4 mb-3">
-                    <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>DASHMIN</h3>
+                    <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>DASHMINa</h3>
                 </a>
                 <div class="d-flex align-items-center ms-4 mb-4">
                     <div class="position-relative">
@@ -55,7 +55,7 @@
                     </div>
                     <div class="ms-3">
                         <h6 class="mb-0" id="userName">Loading...</h6>
-                        <span>Admin</span>
+                        <span>Admin dashboard</span>
                     </div>
                       
                     <script>
