--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="ms-3">
                         <h6 class="mb-0" id="userName">Loading...</h6>
-                        <span>Admin</span>
+                        <span>Admin ibndex</span>
                     </div>
                       
                     <script>
