App Rebranding + Favi Fix

--- a/frontend/newrx.html
+++ b/frontend/newrx.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Drug Detector</title>
+    <link href="img/favicon.ico" rel="icon">
     <style>
         body {
             display: flex;
@@ -28,7 +28,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DASHMIN - Bootstrap Admin Template</title>
+    <title>TextRx - Your Prescription Reminder</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
