--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -46,7 +46,7 @@
         <div class="sidebar pe-4 pb-3">
             <nav class="navbar bg-light navbar-light">
                 <a href="dashboard.html" class="navbar-brand mx-4 mb-3">
-                    <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>DASHMINa</h3>
+                    <img src="img/TxtRxLogo.png" alt="TextRx Logo" class="img-fluid">
                 </a>
                 <div class="d-flex align-items-center ms-4 mb-4">
                     <div class="position-relative">
