--- a/frontend/newrx.html
+++ b/frontend/newrx.html
@@ -351,7 +351,6 @@
                                                 const response = await fetch('/api/getUserID'); 
                                                 const data = await response.json();
                                                 const userId = data.name;
-                                                // console.log("USER1: " + data.name);
 
                                                 
 
@@ -381,7 +380,7 @@
                                                             drugName: matchingSubstring,
                                                             expiryDate: expiryValue,
                                                             quantity: parseInt(quantityValue),
-                                                            dosage: parseInt(dosageValue),
+                                                            instruction: parseInt(dosageValue),
                                                         }],
                                                     }),
                                                 })
