--- a/frontend/widget.html
+++ b/frontend/widget.html
@@ -325,17 +325,20 @@
             </div>
             <!-- Chart End -->
 
-
             <!-- Footer Start -->
             <div class="container-fluid pt-4 px-4">
                 <div class="bg-light rounded-top p-4">
                     <div class="row">
                         <div class="col-12 col-sm-6 text-center text-sm-start">
-                            &copy; <a href="#">Your Site Name</a>, All Right Reserved. 
+                            &copy; <a href="#">TextRx</a>, All Right Reserved. 
                         </div>
                         <div class="col-12 col-sm-6 text-center text-sm-end">
-                            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                            Designed By <a href="https://htmlcodex.com">HTML Codex</a>
+                            Designed By <a href="https://www.linkedin.com/in/valentinojaber/">Danial Jaber</a>, 
+                            <a href="https://www.linkedin.com/in/harrison-macey/">Harry Macey</a>, 
+                            <a href="https://www.linkedin.com/in/wu-joshua/">Joshua Wu</a> &
+                            <a href="https://www.linkedin.com/in/gavin-wei-627b94204/">Gavin Wei</a>
+                        </br>
+                        Distributed At <a class="border-bottom" href="https://nwhacks.io/" target="_blank">NwHacks 2024</a>
                         </div>
                     </div>
                 </div>
