--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -109,7 +109,7 @@
                     <i class="fa fa-bars"></i>
                 </a>
                 <div class="navbar-nav align-items-center ms-auto">
-                    <a href="/pharmbot.html" class="nav-link">
+                    <a href="/pharmbot" class="nav-link">
                         <i class="fa fa-envelope me-lg-2"></i>
                         <span class="d-none d-lg-inline-flex">Message</span>
                     </a>
