--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -55,7 +55,6 @@
                     </div>
                     <div class="ms-3">
                         <h6 class="mb-0" id="userName">Loading...</h6>
-                        <span>Admin dashboard</span>
                     </div>
                       
                     <script>
@@ -147,7 +146,7 @@
                     </div>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                            <span class="d-none d-lg-inline-flex">John Doe</span>
+                            <span class="d-none d-lg-inline-flex">...</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
                             <a href="/profile" class="dropdown-item">My Profile</a>
