WIP: 1157cca Default Image

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -146,12 +146,12 @@
             </nav>
             <!-- Navbar End -->
 
-
-            <!-- Recent Sales Start -->
 <div class="container-fluid pt-4 px-4">
+    <div class="d-flex justify-content-center">
+        <button type="button" class="btn btn-lg btn-primary m-2">Prescription Summary</button>
+    </div>
     <div class="bg-light text-center rounded p-4">
         <div class="d-flex align-items-center justify-content-between mb-4">
-            <h6 class="mb-0">Your Meds</h6>
             <a href="">Show All</a>
         </div>
         <div class="table-responsive">
@@ -161,8 +161,10 @@
                         <!-- <th scope="col"><input class="form-check-input" type="checkbox"></th> -->
                         <th scope="col">Name</th>
                         <th scope="col">Dosage</th>
-                        <th scope="col">Amount Left</th>
-                        <th scope="col">Run out Date</th>
+                        <th scope="col">Quantity Remaining</th>
+                        <th scope="col">Refill Date</th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
                     </tr>
                 </thead>
                 <tbody id="data-table-body">
